--- a/homey/sass/_bookmark-card.scss
+++ b/homey/sass/_bookmark-card.scss
@@ -18,6 +18,7 @@
         margin-left: 0;
         width: auto;
         height: auto;
+        max-height: 100%;
 
         @media(max-width: $mobile-break-med) {
             margin: 1rem;
