--- a/homey/sass/_header.scss
+++ b/homey/sass/_header.scss
@@ -202,7 +202,7 @@
     text-align: center;
     font-size: 1.6rem;
     font-weight: 400;
-    z-index: 2;
+    z-index: 5;
     
     display: flex;
     align-items: center;
